Using correct properties comments

--- a/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/multilang/formBundle.properties
@@ -21,30 +21,31 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-//erreurs
-ContainsTooLargeText = ne doit pas excéder 
-Characters = caractères
 
-userPanel = Sélectionner un utilisateur
-clearUser = Réinitialiser le champ
+# erreurs
+ContainsTooLargeText = ne doit pas exc\u00e9der 
+Characters = caract\u00e8res
 
-groupPanel = Sélectionner un groupe
-clearGroup = Réinitialiser le champ
+userPanel = S\u00e9lectionner un utilisateur
+clearUser = R\u00e9initialiser le champ
+
+groupPanel = S\u00e9lectionner un groupe
+clearGroup = R\u00e9initialiser le champ
 
 removeFile = Supprimer le fichier
 removeImage = Supprimer l'image
 
-SelectValue = Sélectionner une valeur
+SelectValue = S\u00e9lectionner une valeur
 
-// filtres
+# filtres
 eq =
 le = (avant le)
-ge = (après le)
+ge = (apr\u00e8s le)
 
-//Wysiwyg
+# Wysiwyg
 FormattingToolbar = La barre d'outils est accessible seulement en mode Normal 
-FormatText = Texte formatté dans quel type de police ? 
-FormatColor = Texte formatté dans quelle couleur ? 
+FormatText = Texte formatt\u00e9 dans quel type de police ? 
+FormatColor = Texte formatt\u00e9 dans quelle couleur ? 
 Paragraph = Paragraphe
 Normal = Normal <P>
 Heading1 = Titre 1 <H1>
@@ -62,27 +63,27 @@ Color = Couleur
 WYSIWYG = Mode Normal
 HTML = Mode HTML 
 RemoveHtmlTags = Supprimer les tags HTML suivants et valider : 
-RememberHtml = En mode HTML, faites bien attention à remplacer  
+RememberHtml = En mode HTML, faites bien attention \u00e0 remplacer  
 Brackets = les balises < et > par &lt; et &gt; 
 Bold = Gras
 Italic = Italique
-Underline = Souligné
-LeftJustify = Aligné à gauche
-CenterJustify = Centré
-RightJustify = Aligné à droite
-OrderedList = Numérotation
+Underline = Soulign\u00e9
+LeftJustify = Align\u00e9 \u00e0 gauche
+CenterJustify = Centr\u00e9
+RightJustify = Align\u00e9 \u00e0 droite
+OrderedList = Num\u00e9rotation
 UnorderedList = Puces
 RemoveIndent = Diminuer le retrait
 Indent = Augmenter le retrait
 Hyperlink = Lien hypertexte
-LienURL = Un lien vers une URL doit être spécifié ici 
+LienURL = Un lien vers une URL doit \u00eatre sp\u00e9cifi\u00e9 ici 
 URL = URL 
-PageTropGrosse = Erreur, le champ wysiwyg contient de trop nombreux caractères pour pouvoir être sauvegardé. 
-ErreurScript = Erreur, votre code HTML contient des scripts. Seules les pages statiques (sans script) sont autorisées.
+PageTropGrosse = Erreur, le champ wysiwyg contient de trop nombreux caract\u00e8res pour pouvoir \u00eatre sauvegard\u00e9. 
+ErreurScript = Erreur, votre code HTML contient des scripts. Seules les pages statiques (sans script) sont autoris\u00e9es.
 Script = ne doit pas contenir des scripts.
 Black = Noir
 Brown = Marron
-DarkGreen = Vert foncé
+DarkGreen = Vert fonc\u00e9
 Green = Vert
 Olive = Vert olive
 Navy = Marine
@@ -90,7 +91,7 @@ Purple = Pourpre
 Gray = Gris
 Silver = Argent
 Red = Rouge
-DarkRed = Rouge foncé
+DarkRed = Rouge fonc\u00e9
 FluoGreen = Vert fluo
 Yellow = Jaune
 Blue = Bleu
@@ -98,5 +99,5 @@ Fuchsia = Fuchsia
 Turquoise = Turquoise
 White = Blanc
 
-form.Extra = Informations complémentaires
-form.field.file.toolong = doit être un fichier dont le nom ne doit pas excéder 100 caractères.
+form.Extra = Informations compl\u00e9mentaires
+form.field.file.toolong = doit \u00eatre un fichier dont le nom ne doit pas exc\u00e9der 100 caract\u00e8res.
