--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/lookAndFeel/generalLook.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/lookAndFeel/generalLook.properties
@@ -21,45 +21,45 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// Page de login par défaut
+# Page de login par d\u00e9faut
 loginPage =
 
-// Feuille de style par défaut
+# Feuille de style par d\u00e9faut
 defaultStyleSheet = 
 
-// Feuille de style spécifique au login
+# Feuille de style sp\u00e9cifique au login
 defaultLoginStyleSheet = 
 
-// Les logos (login et topBar)
+# Les logos (login et topBar)
 logo =
 
-// Id de l'utilisateur anonyme
+# Id de l'utilisateur anonyme
 anonymousId=
 
-// Activation de l'oubli de mot de passe (forgottenPwdActive = personalQuestion || reinit || false)
+# Activation de l'oubli de mot de passe (forgottenPwdActive = personalQuestion || reinit || false)
 forgottenPwdActive = reinit
 userResetPasswordPage = /defaultResetPassword.jsp
 
-// Question personnelle (en cas d'oubli de mot de passe)
+# Question personnelle (en cas d'oubli de mot de passe)
 userLoginQuestionEnabled=true
 userLoginQuestionPage=/defaultLoginQuestion.jsp
 
-// Si l'utilisateur n'a pas encore rempli sa question personnelle, 
-// on peut le forcer à la remplir
+# Si l'utilisateur n'a pas encore rempli sa question personnelle, 
+# on peut le forcer \u00e0 la remplir
 userLoginQuestionMandatory=true
 userLoginQuestionSelectionPage=/defaultLoginQuestionSelection.jsp
 
-// fonctionnalité associée à la question personnelle :
-// si l'utilisateur remplit sa question personnelle pour la première fois
-// on l'oblige à changer son mot de passe
+# fonctionnalit\u00e9 associ\u00e9e \u00e0 la question personnelle :
+# si l'utilisateur remplit sa question personnelle pour la premi\u00e8re fois
+# on l'oblige \u00e0 changer son mot de passe
 userLoginForcePasswordChange=false
 userLoginForcePasswordChangePage=/defaultForcePasswordChange.jsp
 
-// Liste des questions personnelles proposées
+# Liste des questions personnelles propos\u00e9es
 loginQuestion.count=3
-loginQuestion.1=Quelle est le nom de jeune fille de votre mère ?
+loginQuestion.1=Quelle est le nom de jeune fille de votre m\u00e8re ?
 loginQuestion.2=Quelle est votre ville de naissance ?
-loginQuestion.3=Quelle est le nom de votre animal préféré ?
+loginQuestion.3=Quelle est le nom de votre animal pr\u00e9f\u00e9r\u00e9 ?
 
 forgottenPasswordInvalidLogin = /defaultReInitPassword.jsp?Action=InvalidLogin
 forgottenPasswordChangeAllowed = /defaultReInitPassword.jsp?Action=FirstMailSended
