--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda.properties
@@ -21,68 +21,69 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// agenda
+
+# agenda
 agenda = Mon agenda 
 
-// affichage
+# affichage
 jour = Jour 
 semaine = Semaine 
 mois = Mois 
-annee = Année
+annee = Ann\u00e9e
 
-// invitations
+# invitations
 listeInvitations = Liste des invitations
 
-// Liste de diffusion
+# Liste de diffusion
 listeDiffusion = Liste des participants
 listeDiffusionVide = Aucun 
 editionListeDiffusion =  Inviter des participants
 listeUtilisateurs = Utilisateurs 
-tentative = N'a pas répondu
+tentative = N'a pas r\u00e9pondu
 accepted = Participera
 declined = Ne participera pas
 participations = Invitations
-participationstentative = Non répondu
-participationsaccepted = Accepté
-participationsdeclined = Refusé
+participationstentative = Non r\u00e9pondu
+participationsaccepted = Accept\u00e9
+participationsdeclined = Refus\u00e9
 accepterInvitation = Accepter
 refuserInvitation = Refuser
 
-// Categories
+# Categories
 categories = Rubriques 
 listeCategories = Liste des rubriques
 listeCategoriesVide = Aucune 
 categoriesDispo = Rubriques disponibles
-editionCategories = Sélectionner des rubriques
+editionCategories = S\u00e9lectionner des rubriques
 toutesCategories = Toutes 
 
-// Classification
+# Classification
 classification = Type 
 public = Publique 
-private = Privée 
+private = Priv\u00e9e 
 confidential = Confidentielle
 
-priorite0 = Indéfinie
+priorite0 = Ind\u00e9finie
 priorite1 = Haute
 priorite2 = Moyenne
 priorite3 = Basse
 
-// Operation
+# Operation
 fermer = Fermer 
-nouvelleNote = Nouvel événement
-confirmationSuppressionNote = Etes-vous sûr de vouloir supprimer l'événement
-ajouterNote = Nouvel événement
+nouvelleNote = Nouvel \u00e9v\u00e9nement
+confirmationSuppressionNote = Etes-vous s\u00fbr de vouloir supprimer l'\u00e9v\u00e9nement
+ajouterNote = Nouvel \u00e9v\u00e9nement
 ajouter = Ajouter 
 supprimer = Supprimer 
 mettreAJour = Valider
-retourAgenda = Retour à l'agenda
+retourAgenda = Retour \u00e0 l'agenda
 retour = Retour
 ajoutOk = Ajout OK
-majOk = Mise à jour OK
+majOk = Mise \u00e0 jour OK
 suppressionOk = Suppression OK
 supprimerNote = Supprimer 
 modifierListeDiffusion = Modifier 
-trouverCreneau = Trouver une disponibilité
+trouverCreneau = Trouver une disponibilit\u00e9
 modifierCategories = Modifier les rubriques
 afficherCalendrier = Afficher le calendrier
 mettreAJour = Valider 
@@ -90,24 +91,24 @@ annuler = Annuler
 retour = Retour 
 valider = Valider 
 
-// attribut note
-editerNote = Edition d'un évènement
+# attribut note
+editerNote = Edition d'un \u00e9v\u00e8nement
 organisateurNote = Organisateur
 nomNote = Nom 
 descriptionNote = Description 
-dateDebutNote = Date de début 
-heureDebutNote = Heure de début
+dateDebutNote = Date de d\u00e9but 
+heureDebutNote = Heure de d\u00e9but
 dateFinNote = Date de fin 
 heureFinNote = Heure de fin
-sansHoraireSpecifique = Journée entière
+sansHoraireSpecifique = Journ\u00e9e enti\u00e8re
 mandatoryFields = Obligatoire 
 
-// navigation
-precedent = Précédent 
+# navigation
+precedent = Pr\u00e9c\u00e9dent 
 suivant = Suivant 
 aujourdhui = Aujourd'hui
 
-// jour
+# jour
 weekFirstDay = 2
 weekLastDay = 1
 
@@ -127,98 +128,70 @@ jour6 = Vendredi
 jour7 = Samedi
 jour1 = Dimanche
 
-// mois
+# mois
 mois0 = Janvier
-mois1 = Février
+mois1 = F\u00e9vrier
 mois2 = Mars
 mois3 = Avril
 mois4 = Mai
 mois5 = Juin
 mois6 = Juillet
-mois7 = Août
+mois7 = Ao\u00fbt
 mois8 = Septembre
 mois9 = Octobre
 mois10 = Novembre
-mois11 = Décembre
+mois11 = D\u00e9cembre
 
-// erreur
+# erreur
 utilisateurInconnu = Utilisateur inconnu
 saisieErreur = Erreur de saisie :
-dateDebutErreur = Saisir correctement la date de début (par ex. : 01/09/2000)
+dateDebutErreur = Saisir correctement la date de d\u00e9but (par ex. : 01/09/2000)
 dateFinIncorrecte = Saisir correctement la date de fin (par ex. : 01/09/2000)
 nameErreur = Vous devez indiquer le nom
 organisateurErreur = Vous devez indiquer l'organisateur
-dateFinErreur = La date de début doit précéder la date de fin
-heureFinErreur = Vous devez indiquer l'heure de fin s'il y a une heure de début
-heureDebutErreur = Vous devez indiquer l'heure de début s'il y a une heure de fin
-heureFinAvantDebutErreur = La date de fin doit succéder la date de début
+dateFinErreur = La date de d\u00e9but doit pr\u00e9c\u00e9der la date de fin
+heureFinErreur = Vous devez indiquer l'heure de fin s'il y a une heure de d\u00e9but
+heureDebutErreur = Vous devez indiquer l'heure de d\u00e9but s'il y a une heure de fin
+heureFinAvantDebutErreur = La date de fin doit succ\u00e9der la date de d\u00e9but
 champsTropLong = Champs description trop long !
 TheField = le champ 
-MustContainsText = doit être renseigné 
-ContainsTooLargeText = ne doit pas excéder 
+MustContainsText = doit \u00eatre renseign\u00e9 
+ContainsTooLargeText = ne doit pas exc\u00e9der 
 NbMaxTextArea = 2000 
-Characters = caractères
+Characters = caract\u00e8res
 MustContainsCorrectDate = doit contenir une date correcte 
-MustContainsPostDateToBeginDate = doit contenir une date postérieure à la date de début 
-MustContainsPostHourToBeginHour = doit contenir une heure postérieure à l'heure de début 
+MustContainsPostDateToBeginDate = doit contenir une date post\u00e9rieure \u00e0 la date de d\u00e9but 
+MustContainsPostHourToBeginHour = doit contenir une heure post\u00e9rieure \u00e0 l'heure de d\u00e9but 
 ThisFormContains = Attention, ce formulaire contient 
 Error = erreur 
 Errors = erreurs 
 
-// RDV
+# RDV
 NewRDV = Nouveau RDV
-NewRDVcalled = vous fixe un nouveau rendez-vous intitulé
+NewRDVcalled = vous fixe un nouveau rendez-vous intitul\u00e9
 JourRDV = le
-HeureRDV = à
-ThanksToConfirm = Merci de confirmer ou non votre présence.
+HeureRDV = \u00e0
+ThanksToConfirm = Merci de confirmer ou non votre pr\u00e9sence.
 
-//Agenda sharing
+# Agenda sharing
 viewOtherAgenda = Voir l'agenda d'un utilisateur 
-viewCurrentAgenda = Revenir à votre agenda
-privateEvent = (Privé)
-userAgenda = Agenda de <b>*</b>
-agenda.userAgenda = Agenda de *
-busy = Non disponible
-privateEventLabel = Privé
-publicEventLabel = Publique
-allDay = Toute la journée
-
-<<<<<<< agenda.properties
-//Agenda sharing
-viewOtherAgenda = Voir l'agenda d'un utilisateur 
-viewCurrentAgenda = Revenir à votre agenda
-privateEvent = (Privé)
+viewCurrentAgenda = Revenir \u00e0 votre agenda
+privateEvent = (Priv\u00e9)
 userAgenda = Agenda de <b> * </b>
 busy = Non disponible
-privateEventLabel = Privé
+privateEventLabel = Priv\u00e9
 publicEventLabel = Publique
-allDay = Toute la journée
-=======
-//Notifications
-titleUpdate = Notification de changement d'un RDV
-titleDelete = Notification de suppression d'un RDV
+allDay = Toute la journ\u00e9e
 
-subject = Votre rendez-vous intitulé
-with = avec
-delayed = a été décalé le
-planned = prévu le
-removed = a été supprimé. 
-
-
-
-//------------------------------------------------------------------------------------//
-//                  A mettre à jour dans le multilang general                         //
-//------------------------------------------------------------------------------------//
-
+#  A mettre \u00e0 jour dans le multilang general 
 agenda = Mon agenda 
-
 listeDiffusionVide = Aucun 
 categories = Rubriques 
 listeCategoriesVide = Aucune 
 toutesCategories = Toutes 
 public = Publique 
-private = Privée 
-priorite = Priorité 
+private = Priv\u00e9e 
+priorite = Priorit\u00e9 
 fermer = Fermer 
 supprimer = Supprimer 
 mettreAJour = Valider
@@ -232,11 +205,11 @@ retour = Retour
 valider = Valider 
 nomNote = Nom 
 descriptionNote = Description 
-dateDebutNote = Date de début 
+dateDebutNote = Date de d\u00e9but 
 dateFinNote = Date de fin 
 listeUtilisateurs = Utilisateurs 
 mandatoryFields = Obligatoire 
-precedent = Précédent 
+precedent = Pr\u00e9c\u00e9dent 
 suivant = Suivant 
 
 weekFirstDay = 2
@@ -258,73 +231,68 @@ shortJour7 = S
 shortJour1 = D
 
 mois0 = Janvier
-mois1 = Février
+mois1 = F\u00e9vrier
 mois2 = Mars
 mois3 = Avril
 mois4 = Mai
 mois5 = Juin
 mois6 = Juillet
-mois7 = Août
+mois7 = Ao\u00fbt
 mois8 = Septembre
 mois9 = Octobre
 mois10 = Novembre
-mois11 = Décembre
+mois11 = D\u00e9cembre
 
-agenda.importSettings = Paramètrer l'importation Outlook
+agenda.importSettings = Param\u00e8trer l'importation Outlook
 agenda.outlookImportOptions = Importation Outlook
 agenda.synchroType = Importation
 agenda.outlookSynchro = MS Outlook
 agenda.notesSynchro = Lotus Notes
 agenda.noSynchro = Pas d'importation
-agenda.synchroDelay = Périodicité
+agenda.synchroDelay = P\u00e9riodicit\u00e9
 agenda.minutes = minutes
 agenda.hostName = Mon ordinateur
->>>>>>> 1.7.4.8
 
-<<<<<<< agenda.properties
-//permalink
+# permalink
 agenda.CopyAgendaLink = Pour copier le lien vers l'agenda de cet utilisateur : cliquer droit puis copier l'adresse du lien
 
-//import
-agenda.importSettings = Paramêtrer l'importation
+# import
+agenda.importSettings = Param\u00e8trer l'importation
 agenda.outlookImportOptions = Importation Outlook
 agenda.synchroType = Importation
 agenda.outlookSynchro = MS Outlook
 agenda.notesSynchro = Lotus Notes
 agenda.noSynchro = Pas d'importation
-agenda.synchroDelay = Périodicité
+agenda.synchroDelay = P\u00e9riodicit\u00e9
 agenda.minutes = minutes
 agenda.hostName = Mon ordinateur
 
-//Notifications
+# Notifications
 titleUpdate = Notification de changement d'un RDV
 titleDelete = Notification de suppression d'un RDV
-subject = Votre rendez-vous intitulé
+subject = Votre rendez-vous intitul\u00e9
 with = avec
-delayed = a été décalé le
-planned = prévu le
-removed = a été supprimé. 
+delayed = a \u00e9t\u00e9 d\u00e9cal\u00e9 le
+planned = pr\u00e9vu le
+removed = a \u00e9t\u00e9 supprim\u00e9. 
 
-//Rss
+# Rss
 agenda.agenda = Agenda
-agenda.rssNext = Prochains événements
-agenda.rssPrivateEvent = Evénement privé
-
-=======
-agenda.CopyAgendaLink = Pour copier le lien vers l'agenda de cet utilisateur : Clique droit puis "Copier le raccourci"
+agenda.rssNext = Prochains \u00e9v\u00e9nements
+agenda.rssPrivateEvent = Ev\u00e9nement priv\u00e9
 
 # Import/Export/Synchro Ical
 agenda.ExportIcalCalendar = Exporter au format iCal
 agenda.ExportInProgress = Exportation en cours...
-agenda.ExportSucceeded = Exportation réussie...
-agenda.ExportEmpty = Aucun évènement à exporter...
+agenda.ExportSucceeded = Exportation r\u00e9ussie...
+agenda.ExportEmpty = Aucun \u00e9v\u00e8nement \u00e0 exporter...
 
 agenda.ImportIcalCalendar = Importer un fichier iCal
 agenda.ImportInProgress = Importation en cours...
-agenda.ImportSucceeded = Importation réussie...
-agenda.ImportFailed = L'importation a échouée.
-agenda.ImportEmpty = Aucun évènement à importer...
-agenda.ImportFileCalendar = Fichier iCalendar à importer (*.ics) :
+agenda.ImportSucceeded = Importation r\u00e9ussie...
+agenda.ImportFailed = L'importation a \u00e9chou\u00e9e.
+agenda.ImportEmpty = Aucun \u00e9v\u00e8nement \u00e0 importer...
+agenda.ImportFileCalendar = Fichier iCalendar \u00e0 importer (*.ics) :
 agenda.ImportBadFile = Ce fichier n'est pas un fichier iCal.
 
 agenda.SynchroIcalCalendar = Importer depuis un agenda distant iCalendar
@@ -332,13 +300,12 @@ agenda.SynchroRemoteUrl = URL de l'agenda distant :
 agenda.SynchroRssUrl = Flux RSS de l'agenda distant :
 agenda.SynchroRemoteLogin = Login :
 agenda.SynchroRemotePwd = Mot de passe :
-agenda.SynchroCharset = Jeu de caractères :
+agenda.SynchroCharset = Jeu de caract\u00e8res :
 agenda.SynchroInProgress = Importation en cours...
 
-agenda.SynchroFailed = La synchronisation a échouée.
-agenda.SynchroSucceeded = Synchronisation réussie.
-agenda.Subscribe = Lien d'accès privé à cet agenda : 
+agenda.SynchroFailed = La synchronisation a \u00e9chou\u00e9e.
+agenda.SynchroSucceeded = Synchronisation r\u00e9ussie.
+agenda.Subscribe = Lien d'acc\u00e8s priv\u00e9 \u00e0 cet agenda : 
 
-agenda.ChooseDaysOff = Sélection des jours 
-agenda.DaysOffSilver = non travaillés
->>>>>>> 1.7.4.8
+agenda.ChooseDaysOff = S\u00e9lection des jours 
+agenda.DaysOffSilver = non travaill\u00e9s
