--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard.properties
@@ -21,36 +21,43 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+
 clipboard = Presse-Papier
-// navigation
-  accueil = Accueil
-  retour = Retour
-// attribut
-  titre = Titre
-  composant = Service
-  information = Description 
-  dateDebut = Début de visibilité
-  dateFin = Fin de visibilité
-  obligatoire = Obligatoire 
-// Presse-papier
-  copier = Copier
-  couper = Couper
-  coller = Coller
+
+# navigation
+accueil = Accueil
+retour = Retour
+
+# attribut
+titre = Titre
+composant = Service
+information = Description 
+dateDebut = D\u00e9but de visibilit\u00e9
+dateFin = Fin de visibilit\u00e9
+obligatoire = Obligatoire 
+
+# Presse-papier
+copier = Copier
+couper = Couper
+coller = Coller
 reset = Supprimer 
-  fermer = Fermer
+fermer = Fermer
 ouvrir = Ouvrir
-// actions
-  supprimer = Supprimer
-  valider = Valider
-  annuler = Annuler
-  creation = Créer un QuickInfo
-  edition = Modifier
-  suppression = Supprimer
-//confirmation
-supprimerQIConfirmation = Etes-vous sûr de vouloir supprimer le QuickInfo ?
-// erreurs
-titreObligatoire = Impossible de créer le QuickInfo : Indiquer le nom
-dateDebutAvantDateFin = Impossible de créer le QuickInfo : La date de début doit précéder la date de fin
-  pasteError = Impossible de coller
-  copyError = Impossible de copier
+
+# actions
+supprimer = Supprimer
+valider = Valider
+annuler = Annuler
+creation = Cr\u00e9er un QuickInfo
+edition = Modifier
+suppression = Supprimer
+
+# confirmation
+supprimerQIConfirmation = Etes-vous s\u00fbr de vouloir supprimer le QuickInfo ?
+
+# erreurs
+titreObligatoire = Impossible de cr\u00e9er le QuickInfo : Indiquer le nom
+dateDebutAvantDateFin = Impossible de cr\u00e9er le QuickInfo : La date de d\u00e9but doit pr\u00e9c\u00e9der la date de fin
+pasteError = Impossible de coller
+copyError = Impossible de copier
 vide =
