--- a/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/todo/multilang/todo.properties
@@ -21,70 +21,70 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// composant
-todo = Mes tâches
+
+# composant
+todo = Mes t\u00e2ches
 actions = Etat
 
-// titre
-editionTodo = Edition d'une tâche
+# titre
+editionTodo = Edition d'une t\u00e2che
 
-// action
+# action
 affichierCalendrier = Calendrier
-ajouterTache = Créer une tâche
-todoDeleteConfirm = Etes-vous sûr de vouloir supprimer la tâche
-affecterTodo = Affecter des personnes à cette tâche
+ajouterTache = Cr\u00e9er une t\u00e2che
+todoDeleteConfirm = Etes-vous s\u00fbr de vouloir supprimer la t\u00e2che
+affecterTodo = Affecter des personnes \u00e0 cette t\u00e2che
 
-// onglets
-mesTaches = Mes tâches
+# onglets
+mesTaches = Mes t\u00e2ches
 suiviAffectation = Affectations
 historique = Historique
 
-// attributs du todo
-dueDateToDo = Echéance
+# attributs du todo
+dueDateToDo = Ech\u00e9ance
 percentCompletedToDo = Avancement
-percentUndefined = Non démarré
+percentUndefined = Non d\u00e9marr\u00e9
 listeDiffusion = Affectations
 listeDiffusionCourt = Affectations
 organisateurToDo = Organisateur
-dateDebutToDo = Date de début
-heureDebutToDo = Heure de début
+dateDebutToDo = Date de d\u00e9but
+heureDebutToDo = Heure de d\u00e9but
 dateFinToDo = Date de fin
 heureFinToDo = Heure de fin
 sansHoraireSpecifique = Sans horaire
 
-// liste de diffusion
-editionListeDiffusion = Sélectionner
+# liste de diffusion
+editionListeDiffusion = S\u00e9lectionner
 
-// Classification
+# Classification
 classification = Classification
 confidential = Confidentielle //"N'a aucun sens fonctionnel"
 
-// priorite
-priorite0 = Indéfinie
+# priorite
+priorite0 = Ind\u00e9finie
 priorite1 = Haute
 priorite2 = Moyenne
 priorite3 = Basse
 
-// erreur
+# erreur
 utilisateurInconnu = Utilisateur inconnu
 saisieErreur = Erreur de saisie : 
-dateDebutErreur = Saisir correctement la date de début (par ex. : 01/09/2000)
+dateDebutErreur = Saisir correctement la date de d\u00e9but (par ex. : 01/09/2000)
 dateFinIncorrecte = Saisir correctement la date de fin (par ex. : 01/09/2000)
 nameErreur = Vous devez indiquer le nom.
 pourcentErreur = Pourcent d'avancement incorrecte
-MustContainsText = doit être renseigné 
+MustContainsText = doit \u00eatre renseign\u00e9 
 MustContainsCorrectDate = doit contenir une date correcte 
-MustContainsPostDateToBeginDate = doit contenir une date postérieure à la date de début 
+MustContainsPostDateToBeginDate = doit contenir une date post\u00e9rieure \u00e0 la date de d\u00e9but 
 ThisFormContains = Attention, ce formulaire contient 
 Error = erreur 
 Errors = erreurs 
-ContainsTooLargeText = ne doit pas excéder 
+ContainsTooLargeText = ne doit pas exc\u00e9der 
 NbMaxTextArea = 2000 
-Characters = caractères
+Characters = caract\u00e8res
 
 
-
-// A mettre en general
+# A mettre en general
 retour = Retour 
 ajouter = Valider 
 mettreAJour = Valider 
@@ -95,8 +95,8 @@ descriptionToDo = Description
 nomToDo = Nom
 mandatoryFields = Obligatoire 
 public = Publique  
-private = Privée  
-priorite = Priorité 
+private = Priv\u00e9e  
+priorite = Priorit\u00e9 
 
-cadenas_clos = Tâche close
-cadenas_ouvert = Tâche en cours
+cadenas_clos = T\u00e2che close
+cadenas_ouvert = T\u00e2che en cours
