--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment.properties
@@ -58,7 +58,7 @@ nomVide = Vous devez remplir tous les champs obligatoires
 pleaseFill = Vous devez remplir tous les champs obligatoires
 pleaseFill_single = Vous devez remplir tous les champs obligatoires.
 
-// erreurs
+# erreurs
 erreur = Erreur
 champsTropLong = Le commentaire est limit\u00e9 \u00e0 2000 caract\u00e8res
 
