--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/Initial.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/Initial.properties
@@ -37,13 +37,13 @@ FormPane = com.stratelia.webactiv.util.viewGenerator.html.formPanes.FormPaneWA
 Board = com.stratelia.webactiv.util.viewGenerator.html.board.BoardSP
 Pagination = com.stratelia.webactiv.util.viewGenerator.html.pagination.PaginationSP
 
-//Stylesheet
+# Stylesheet
 StyleSheet = 
 
-//Mainframe
+# Mainframe
 FrameJSP = MainFrame.jsp
 
-// Icones de la topBar
+# Icones de la topBar
 smallLogo = 
 mailIcon = 
 mapIcon = 
@@ -62,12 +62,12 @@ arrowRightIcon =
 wallPaper = 
 FondManager = /silverpeas/jobManagerPeas/jsp/icons/fondmanager.gif
 
-//Icones de la domainBar
+# Icones de la domainBar
 collaborativeIcon = 
 homeSpaceIcon = 
 
 
-// Pour des looks specifiques
+# Pour des looks specifiques
 item01 =
 item02 =
 item03 =
