--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/Silverblue.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/Silverblue.properties
@@ -38,5 +38,5 @@ StyleSheet = /util/styleSheets/globalSP.css
 
 FrameJSP = MainFrameSilverblue.jsp
 
-// Icones de la topBar
+# Icones de la topBar
 FondManager = /silverpeas/jobManagerPeas/jsp/icons/fondmanager.gif
