--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -32,34 +32,34 @@ JSPP.peas = Service
 JSPP.portlet = Portlet
 JSPP.webPage = URL
 
-JSPP.selectPeas = Sélection d'un service
+JSPP.selectPeas = S\u00e9lection d'un service
 JSPP.spaceHomePage = Page d'accueil de l'espace
 
 JSPP.update = Modifier
 JSPP.updateHomePage = Page d'accueil
 
-JSPP.SpaceTemplate = Modèles d'espaces
+JSPP.SpaceTemplate = Mod\u00e8les d'espaces
 JSPP.NoTemplate = Espace Vide
-JSPP.UPSpaceTemplateProfile = Sélectionner les groupes/utilisateurs à affecter au Rôle
+JSPP.UPSpaceTemplateProfile = S\u00e9lectionner les groupes/utilisateurs \u00e0 affecter au R\u00f4le
 
 JSPP.welcome =  Bienvenue sur le module Gestion d'espaces
 
-JSPP.maintenanceTout = La totalité de Silverpeas est en mode Maintenance !
+JSPP.maintenanceTout = La totalit\u00e9 de Silverpeas est en mode Maintenance !
 JSPP.maintenance = Mode Maintenance :
 JSPP.maintenanceStatus = Cet espace est actuellement
 JSPP.maintenanceTxtModeOn = en mode maintenance...
 JSPP.maintenanceModeOn = Actif
-JSPP.maintenanceModeOff = Désactivé
+JSPP.maintenanceModeOff = D\u00e9sactiv\u00e9
 JSPP.maintenanceModeToOn = Activer le mode maintenance
-JSPP.maintenanceModeToOff = Désactiver le mode maintenance
+JSPP.maintenanceModeToOff = D\u00e9sactiver le mode maintenance
 
-JSPP.ProfilePanelCreateTitle = Définir les Rôles
-JSPP.ProfilePanelModifyTitle = Modifier le Rôle
-JSPP.ProfilePanelDeleteTitle = Supprimer le Rôle
+JSPP.ProfilePanelCreateTitle = D\u00e9finir les R\u00f4les
+JSPP.ProfilePanelModifyTitle = Modifier le R\u00f4le
+JSPP.ProfilePanelDeleteTitle = Supprimer le R\u00f4le
 
-JSPP.SpaceProfilePanelCreateTitle = Définir les utilisateurs du rôle
-JSPP.SpaceProfilePanelModifyTitle = Modifier les utilisateurs du rôle
-JSPP.SpaceProfilePanelDeleteTitle = Supprimer les utilisateurs du rôle
+JSPP.SpaceProfilePanelCreateTitle = D\u00e9finir les utilisateurs du r\u00f4le
+JSPP.SpaceProfilePanelModifyTitle = Modifier les utilisateurs du r\u00f4le
+JSPP.SpaceProfilePanelDeleteTitle = Supprimer les utilisateurs du r\u00f4le
 
 JSPP.ComponentPanelCreateTitle = Ajouter un service
 JSPP.ComponentPanelModifyTitle = Modifier le service
@@ -67,81 +67,81 @@ JSPP.ComponentPanelDeleteTitle = Supprimer le service
 JSPP.CopyComponent = Copier le service
 JSPP.PasteComponent = Coller
 
-JSPP.SubSpacePanelCreateTitle = Créer un Sous Espace
-JSPP.SpacePanelCreateTitle = Créer un Espace
+JSPP.SubSpacePanelCreateTitle = Cr\u00e9er un Sous Espace
+JSPP.SpacePanelCreateTitle = Cr\u00e9er un Espace
 JSPP.SpacePanelModifyTitle = Modifier l'Espace
 JSPP.SpacePanelDeleteTitle = Supprimer l'Espace
 
 JSPP.Choose = Selectionnez...
 JSPP.ModifyStartPage = Modifier la page d'accueil
 
-//form
-JSPP.creationSpace = Création d'espace
-JSPP.creationSubSpace = Création de sous-espace
+# form
+JSPP.creationSpace = Cr\u00e9ation d'espace
+JSPP.creationSubSpace = Cr\u00e9ation de sous-espace
 JSPP.updateSpace = Modification d'espace
 JSPP.creationInstance = Ajout d'un service
-JSPP.roleDescription = Description du rôle
+JSPP.roleDescription = Description du r\u00f4le
 
-//erreurs
-MustContainsText = doit être renseigné 
+# erreurs
+MustContainsText = doit \u00eatre renseign\u00e9 
 ThisFormContains = Attention, ce formulaire contient 
-ContainsTooLargeText = ne doit pas excéder 
+ContainsTooLargeText = ne doit pas exc\u00e9der 
 NbMaxTextArea = 2000 
-Characters = caractères
-JSPP.MustBeginsByHTTP = doit contenir une URL débutant par http://
+Characters = caract\u00e8res
+JSPP.MustBeginsByHTTP = doit contenir une URL d\u00e9butant par http://
 
-//messages
+# messages
 JSPP.MessageSuppressionSpaceBegin = Etes-vous sur de vouloir supprimer cet espace ?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
 JSPP.MessageSuppressionSpaceManager = Etes-vous sur de vouloir supprimer les utilisateurs ?
 JSPP.MessageSuppressionInstanceBegin = Etes-vous sur de vouloir supprimer ce service ?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
-//onglets roles
+# onglets roles
 Manager = Manager d'espace 
 
-// Gestion de l'ordre
-JSPP.SpaceOrder = Déplacement de l'espace
-JSPP.SpacePlace = Déplacement avant l'espace
-JSPP.PlaceLast = Déplacer en fin
-JSPP.ComponentOrder = Déplacement du service
-JSPP.ComponentPlace = Déplacement avant le composant
+# Gestion de l'ordre
+JSPP.SpaceOrder = D\u00e9placement de l'espace
+JSPP.SpacePlace = D\u00e9placement avant l'espace
+JSPP.PlaceLast = D\u00e9placer en fin
+JSPP.ComponentOrder = D\u00e9placement du service
+JSPP.ComponentPlace = D\u00e9placement avant le composant
 
-// order space, component
+# order space, component
 JSPP.SpacePosition = Display component
 JSPP.NoSpacePosition = Select position
 JSPP.SpacePositionFirst = After space
 JSPP.SpacePositionLast = Before space
 
-// Copy/Cut/Paste component
+# Copy/Cut/Paste component
 JSPP.CopyOf = Copy of 
 
-// Deplacement de composant
-JSPP.SpaceIn = Déplacement dans l'espace
-JSPP.SpacesNotInMaintenance	= L'espace source et destination doivent être en maintenance...
-JSPP.MessageConfirmMovingComponentInSpace = Etes-vous sur de vouloir déplacer ce composant dans cet espace ?
-JSPP.ExistingComponentName = Déplacement impossible... Un composant portant le même nom existe déja dans l'espace de destination.
-JSPP.movingInProgress = Déplacement en cours...
+# Deplacement de composant
+JSPP.SpaceIn = D\u00e9placement dans l'espace
+JSPP.SpacesNotInMaintenance	= L'espace source et destination doivent \u00eatre en maintenance...
+JSPP.MessageConfirmMovingComponentInSpace = Etes-vous sur de vouloir d\u00e9placer ce composant dans cet espace ?
+JSPP.ExistingComponentName = D\u00e9placement impossible... Un composant portant le m\u00eame nom existe d\u00e9ja dans l'espace de destination.
+JSPP.movingInProgress = D\u00e9placement en cours...
 
-//Sauvegarde
+# Sauvegarde
 JSPP.BackupUnlimited = Sauvegarder/Restaurer des composants
 JSPP.BackupSpace = Sauvegarder/Restaurer des composants de l'espace
 
-JSPP.ErrorComponentCreation = Erreur lors de la création du composant
+JSPP.ErrorComponentCreation = Erreur lors de la cr\u00e9ation du composant
 JSPP.ErrorComponentUpdate = Erreur lors de la modification du composant
-JSPP.ErrorComponentMessage = Vérifiez qu'un autre composant de l'espace ne porte pas déjà le même nom !
-JSPP.ErrorSpaceCreation = Erreur lors de la création de l'espace
+JSPP.ErrorComponentMessage = V\u00e9rifiez qu'un autre composant de l'espace ne porte pas d\u00e9j\u00e0 le m\u00eame nom !
+JSPP.ErrorSpaceCreation = Erreur lors de la cr\u00e9ation de l'espace
 JSPP.ErrorSpaceUpdate = Erreur lors de la modification de l'espace
-JSPP.ErrorSpaceMessage = Vérifiez qu'un autre espace de même niveau ne porte pas déjà le même nom !
+JSPP.ErrorSpaceMessage = V\u00e9rifiez qu'un autre espace de m\u00eame niveau ne porte pas d\u00e9j\u00e0 le m\u00eame nom !
 
-//Corbeille
+# Corbeille
 JSPP.Bin = Corbeille d'espaces et de composants
 JSPP.BinRemoveDate = Date de suppression
 JSPP.BinRestore = Restaurer
-JSPP.BinRestoreSelected = Etes-vous sûr(e) de vouloir restaurer les éléments sélectionnés ?
-JSPP.BinDelete = Supprimer définitivement
+JSPP.BinRestoreSelected = Etes-vous s\u00fbr(e) de vouloir restaurer les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s ?
+JSPP.BinDelete = Supprimer d\u00e9finitivement
 JSPP.BinEmpty = La corbeille est vide !
-JSPP.BinDeleteConfirm = Etes-vous sûr(e) de vouloir supprimer définitivement cet élément et tout ce qu'il contient ?
-JSPP.BinDeleteConfirmSelected = Etes-vous sûr(e) de vouloir supprimer définitivement les éléments sélectionnés et tout ce qu'ils contiennent ?
+JSPP.BinDeleteConfirm = Etes-vous s\u00fbr(e) de vouloir supprimer d\u00e9finitivement cet \u00e9l\u00e9ment et tout ce qu'il contient ?
+JSPP.BinDeleteConfirmSelected = Etes-vous s\u00fbr(e) de vouloir supprimer d\u00e9finitivement les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s et tout ce qu'ils contiennent ?
 
-JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas préciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
+JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>URL</b> : <ul><li>Adresse absolue. Exemple : http://www.google.com</li><li>Adresse interne. Exemple : /admin/jsp/page.jsp (ne pas pr\u00e9ciser le contexte /silverpeas)</li><li>Adresse interne dans une autre application web. Exemple : <b>$</b>/weblib/pages/page.jsp (commencer par $/<nom_application_web>)</li></ul>
