--- a/config-core/src/main/config/properties/com/silverpeas/searchEngine/searchEngineSettings.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/searchEngine/searchEngineSettings.properties
@@ -21,7 +21,8 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// Opérande par défaut si celui-ci n'est pas spécifié (0=OR 1=AND)
+
+# Op\u00e9rande par d\u00e9faut si celui-ci n'est pas sp\u00e9cifi\u00e9 (0=OR 1=AND)
 defaultOperand = 1
 #indicates the number max of results returned by the search operation
 maxResults = 10000
