--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/askOnce.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/askOnce.properties
@@ -21,13 +21,15 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-// this file is configuration for askOnce connection
-// ---------------
-// login	: Login to be used to connect to askOnce
-// password	: Password to be used to connect to askOnce
-// serverName	: Name to be used to connect to askOnce
-// serverPort	: Server Port to be used to connect to askOnce
-// rmiName	: RMI name of Ask'Once server
+
+
+# this file is configuration for askOnce connection
+# ---------------
+# login	: Login to be used to connect to askOnce
+# password	: Password to be used to connect to askOnce
+# serverName	: Name to be used to connect to askOnce
+# serverPort	: Server Port to be used to connect to askOnce
+# rmiName	: RMI name of Ask'Once server
 
 login= guest
 password=askonce
