Feature #2529 adding missing commit

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/viewGenerator/settings/SilverpeasLight.properties
@@ -101,6 +101,7 @@ displayComponentIcons = true
 
 displayPDCFrame = true
 displayPDCInNav = false
+displayPDCInHomePage = true
 
 displayConnectedUsers = true
 
