closing feature #2484 Adding avatar, username and link to profile in header

--- a/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/lookSilverpeasV5/multilang/lookBundle.properties
@@ -40,6 +40,7 @@ lookSilverpeasV5.reductExtend = Réduire / Etirer
 lookSilverpeasV5.backOffice = Administration
 lookSilverpeasV5.home = Accueil
 lookSilverpeasV5.directory = Annuaire
+lookSilverpeasV5.userlink = Afficher mon fil d'information et mon profil
 
 # Connected Users
 lookSilverpeasV5.connectedUser = autre utilisateur connecté
