reducing the amount of traces

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainOpenDS.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/authentication/autDomainOpenDS.properties
@@ -29,6 +29,7 @@ fallbackType=always
 
 # Authentication servers
 # Available types are : com.stratelia.silverpeas.authentication.AuthenticationNT, com.stratelia.silverpeas.authentication.AuthenticationSQL and com.stratelia.silverpeas.authentication.AuthenticationLDAP
+allowPasswordChange=false
 
 autServersCount=1
 
@@ -42,3 +43,4 @@ autServer0.LDAPUserBaseDN=ou=silverpeas,dc=silverpeas,dc=com
 autServer0.LDAPUserLoginFieldName=uid
 autServer0.LDAPSecured=false
 autServer0.LDAPSecuredPort=636
+autServer0.MustAlertPasswordExpiration=false
