--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -247,6 +247,10 @@
       <artifactId>jericho-html</artifactId>
     </dependency>
     <dependency>
+      <groupId>pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.pdfbox</groupId>
       <artifactId>pdfbox</artifactId>
     </dependency>
