--- a/ejb-core/publication/pom.xml
+++ b/ejb-core/publication/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>5.7.3-SNAPSHOT</version>
+    <version>5.7.3</version>
   </parent>
 	
   <groupId>com.silverpeas.core.ejb-core</groupId>
