--- a/it-test-core/pom.xml
+++ b/it-test-core/pom.xml
@@ -4,7 +4,7 @@
 <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>5.7.3</version>
+    <version>5.7.4-SNAPSHOT</version>
   </parent>
 
   <groupId>com.silverpeas.core</groupId>
