--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 
   <groupId>com.silverpeas</groupId>
   <artifactId>core</artifactId>
-  <version>5.7.3</version>
+  <version>5.7.4-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Silverpeas Core</name>
 
