--- a/pom.xml
+++ b/pom.xml
@@ -139,17 +139,18 @@
               <reportSets>
                 <reportSet>
                   <reports>
-                    <report>cim</report>
-                    <report>dependencies</report>
-                    <report>dependency-convergence</report>
-                    <report>dependency-management</report>
-                    <report>distribution-management</report>
+                    <report>cim</report>                    
                     <report>index</report>
                     <report>issue-tracking</report>
                     <report>modules</report>
                     <report>project-team</report>
                     <report>license</report>
                     <report>scm</report>
+                    <report>mailing-list</report>
+                    <report>dependencies</report>
+                    <report>dependency-convergence</report>
+                    <report>dependency-management</report>
+                    <report>distribution-management</report>
                   </reports>
                 </reportSet>
               </reportSets>
@@ -235,7 +236,7 @@
   </modules>
 
   <properties>
-    <installer_stable_version>5.7.2</installer_stable_version>
+    <installer_stable_version>5.7.3</installer_stable_version>
     <installer_version>${project.version}</installer_version>
   </properties>
 
