--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -13,6 +13,7 @@
   <artifactId>lib-core</artifactId>
   <packaging>jar</packaging>
   <name>Lib Core</name>
+  <description>A module providing all the basic services of Silverpeas on which can rely the EJBs and the web parts.</description>
 
   <dependencies>
     <dependency>
