--- a/pom.xml
+++ b/pom.xml
@@ -138,19 +138,19 @@
               <version>2.4</version>
               <reportSets>
                 <reportSet>
-                  <reports>
-                    <report>cim</report>                    
+                  <reports>              
                     <report>index</report>
-                    <report>issue-tracking</report>
-                    <report>modules</report>
+                    <report>summary</report>
                     <report>project-team</report>
-                    <report>license</report>
-                    <report>scm</report>
                     <report>mailing-list</report>
+                    <report>issue-tracking</report>        
+                    <report>scm</report>
+                    <report>cim</report>  
                     <report>dependencies</report>
                     <report>dependency-convergence</report>
                     <report>dependency-management</report>
                     <report>distribution-management</report>
+                    <report>modules</report>
                   </reports>
                 </reportSet>
               </reportSets>
