--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -246,6 +246,7 @@ GML.PDCParam = Param\u00e9trer l'utilisation du PDC
 GML.PDCNewPosition = Ajouter une position ...
 GML.PDCValidatePosition = Valider cette position
 GML.PDCDeletePosition = Supprimer la position
+GML.PDCPredefinePositions = Pr\u00e9d\u00e9finir un classement sur le PDC
 
 #Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00e9der \u00e0 l'information d\u00e9sir\u00e9e !
