Feature #2095 Manages the predefined classifications inherited from the one associated with a parent topic or with the component instance. WHen a predefined classification comes from a parent node (or from a component instance), the predefined classification associated with the current node is then generated from it, but it will be persisted only if a change occurs with its predefine classification

--- a/ejb-core/pdc/pom.xml
+++ b/ejb-core/pdc/pom.xml
@@ -79,7 +79,8 @@
     <filters>
       <filter>src/test/filters/filters.properties</filter>
     </filters>
-<!--    <plugins>
+    <!--
+    <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>hibernate3-maven-plugin</artifactId>
@@ -109,7 +110,8 @@
           </componentProperties>
         </configuration>
       </plugin>
-    </plugins>-->
+    </plugins>
+          -->
   </build>
   <properties>
     <netbeans.hint.deploy.server>JBoss4</netbeans.hint.deploy.server>
