Feature #2095 Now the REST-based web service in charge of predefined classifications accepts directly update, creation and getting of predefined classifications associated with nodes or component instances. Some UI characteristics are refined in the rendering of positions and predefined classifications coming from parent node

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -82,6 +82,8 @@ pdcPeas.addPosition                    = Ajouter une position
 pdcPeas.editPosition                   = Modifier la position
 pdcPeas.deletePosition                 = Supprimer la position
 pdcPeas.deletedPosition                = Position supprim\u00e9e
+pdcPeas.saveThePosition                = Enregistrer la position
+pdcPeas.inheritedPositions             = Positions du th\u00e8me parent
 
 pdcPeas.path                           = Chemin
 pdcPeas.variant                        = Variant
@@ -273,7 +275,7 @@ pdcPeas.error= Erreur
 external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
 
-pdcPeas.MustContainsMandatoryAxis=doit être classée sur les axes obligatoires
+pdcPeas.MustContainsMandatoryAxis=doit \u00eatre class\u00e9e sur les axes obligatoires
 pdcPeas.MustBeClassified = Le classement est obligatoire pour la cr\u00e9ation d'une contribution.<br />Veuillez s\u00e9lectionner une position et la valider.
 pdcPeas.theContent=Cette contribution
 
