Feature #2095 Update the texts used in the predefinition of a classification on the PdC. Change the style of the button with which a new position on the PdC is added when predefining a classification or publishing a new content. Add a message to inform the user he can explicitly predefine a classification on the PdC for a given node or he can use the predefined classification of the parent node

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -82,7 +82,7 @@ pdcPeas.addPosition                    = Ajouter une position
 pdcPeas.editPosition                   = Modifier la position
 pdcPeas.deletePosition                 = Supprimer la position
 pdcPeas.deletedPosition                = Position supprim\u00e9e
-pdcPeas.saveThePosition                = Enregistrer la position
+pdcPeas.saveThePosition                = Enregistrer la position ci-dessus
 pdcPeas.inheritedPositions             = Positions du th\u00e8me parent
 
 pdcPeas.path                           = Chemin
@@ -278,6 +278,7 @@ external.search.server.2.label=My external server 2
 pdcPeas.MustContainsMandatoryAxis=doit \u00eatre class\u00e9e sur les axes obligatoires
 pdcPeas.MustBeClassified = Le classement est obligatoire pour la cr\u00e9ation d'une contribution.<br />Veuillez s\u00e9lectionner une position et la valider.
 pdcPeas.theContent=Cette contribution
+pdcPeas.CanDoAPredefineClassification = Vous avez la possibilit\u00e9 de d\u00e9finir un classement par d\u00e9faut pour les publications de ce th\u00e8me. <br />Sinon ce th\u00e8me utilisera le classement d\u00e9fini pour le th\u00e8me parent.
 
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications GED
