Fixing problems with generics in displayers

--- a/ejb-core/formtemplate/src/test/resources/com/silverpeas/form/settings/formIcons.properties
+++ b/ejb-core/formtemplate/src/test/resources/com/silverpeas/form/settings/formIcons.properties
@@ -21,6 +21,9 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-templateFilesMapping = mapping/templateFilesMapping.xml
-templateMapping = mapping/templateMapping.xml
-mappingDir  = file://${basedir}/target/test-classes/templateRepository
+mandatoryField = /util/icons/mandatoryField.gif
+userPanel = /util/icons/user.gif
+px = /util/icons/colorPix/1px.gif
+delete = /util/icons/delete.gif
+jdbc = /util/icons/update.gif
+groupPanel = /util/icons/groupe.gif
