--- a/ejb-core/formtemplate/src/test/resources/com/silverpeas/publicationTemplate/settings/mapping.properties
+++ b/ejb-core/formtemplate/src/test/resources/com/silverpeas/publicationTemplate/settings/mapping.properties
@@ -21,6 +21,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-templateFilesMapping = mapping/templateFilesMapping.xml
-templateMapping = mapping/templateMapping.xml
-mappingDir  = file://${basedir}/target/test-classes/templateRepository
+templateFilesMapping=mapping/templateFilesMapping.xml
+templateMapping=mapping/templateMapping.xml
+mappingDir=${basedir}/target/test-classes/templateRepository
